# ai-ape-engine

./: .env.example  .env.fix  .env.production  .env.production.example  .gitignore  =0.0.5  AGENTS.md  COMMANDS.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  FIX_ENVIRONMENT.md  IMPLEMENTATION_STATUS.md  MOBILE_BATCH2_COMPLETE.md  MOBILE_BATCH3_COMPLETE.md  MOBILE_IMPLEMENTATION_BATCH1.md  MOBILE_IMPLEMENTATION_SUMMARY.md  MOBILE_TESTING_GUIDE.md  MVP_COMPLETE.md  NEXT_STEPS.md  PRODUCTION.md  PROJECT_STRUCTURE.md  QUICK_START.md  QUICK_START_MOBILE.md  README.md  README_DOCS.md  ROADMAP.md  SESSION_SUMMARY.md  SUCCESS.md  SYNC_STATUS.md  TESTING_AUTH.md  TESTING_GUIDE.md  VISUAL_TESTING_CHECKLIST.md  alembic.ini  ape-backend-key.pem  ape_api_collection.json  description.txt  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  (+9 more)
.github/workflows/: ci.yml
docs/: IMPLEMENTATION_STATUS.md  architecture.md  requirements.json
scripts/: generate_stage3.py
src/: __init__.py  config.py  dependencies.py  main.py
src/api/: __init__.py
src/api/middleware/: logging.py  rate_limit.py
src/api/routes/: __init__.py  auth.py  batch.py  chat.py  code.py  export.py  extraction.py  health.py  instruction.py  processing.py  research.py
src/api/schemas/: auth.py  chat.py
src/core/: __init__.py  exceptions.py  logging.py  security.py
src/db/: redis.py  session.py
src/db/migrations/: env.py
src/db/migrations/versions/: 240f6dc265cb_add_batch_processing_models.py  50fbea6f35e8_initial_database_schema.py
src/llm/: base.py  bedrock_provider.py  groq_provider.py  openai_provider.py
src/models/: __init__.py  audit_log.py  base.py  batch_job.py  conversation.py  extraction_job.py  message.py  research_session.py  usage_record.py  user.py
src/repositories/: conversation_repository.py  message_repository.py  user_repository.py
src/services/: auth_service.py  batch_processing_service.py  chat_service.py  code_service.py  cost_tracking.py  export_service.py  extraction_service.py  job_queue.py  llm_service.py  processing_status.py  research_service.py  transformation_service.py
test_data/: sample_report.txt  sample_sales.csv
tests/: conftest.py  test_auth.py  test_chat.py
